<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ellenomoto.project01.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/calculate"
        android:layout_alignTop="@+id/modify_amount"
        android:layout_alignEnd="@+id/jogging_amount" />
        <!--android:onClick="sendMessage" />-->

    <EditText
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercise_type"
        android:text="@string/exercise_type"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:text="@string/amount"
        android:gravity="center"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toEndOf="@+id/modify_amount" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/exercise_type"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup"
        android:layout_alignBottom="@+id/jogging_amount"
        android:layout_toStartOf="@+id/amount"
        android:layout_marginTop="5dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:text="@string/pushup"
            android:id="@+id/pushup_radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:text="@string/situp"
            android:id="@+id/situp_radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/jumpingjacks"
            android:id="@+id/jumpingjacks_radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogging"
            android:id="@+id/jogging_radioButton"
            android:checked="false"
            android:layout_marginTop="5dp" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/modify_amount"
        android:layout_below="@+id/instructions"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/pushup_amount"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/amount"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/situp_amount"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/pushup_amount"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/pushup_amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/jumpingjacks_amount"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/situp_amount"
        android:layout_alignStart="@+id/situp_amount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/jogging_amount"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/jumpingjacks_amount"
        android:layout_alignEnd="@+id/jumpingjacks_amount"
        android:layout_alignStart="@+id/jumpingjacks_amount" />

    <EditText
        android:inputType="textMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:gravity="center"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/calories"
        android:layout_alignParentStart="true" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calories"
        android:text="@string/calories"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/jogging_amount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/calories_amount"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignTop="@+id/calories"
        android:layout_alignEnd="@+id/instructions"
        android:layout_alignBottom="@+id/calories"
        android:layout_alignStart="@+id/jogging_amount" />

</RelativeLayout>
